--- a/StarterCode_PA1/config.ini
+++ b/StarterCode_PA1/config.ini
@@ -13,6 +13,6 @@
 Strategy=Centralized
 
 [Dissemination]
-Strategy=ViaBroker
-# Strategy=Direct
+# Strategy=ViaBroker
+Strategy=Direct
 # Alernate choice can be Broker
